lab1/Test/L1-A-13-27.output
Error Type B at Line 4
Error Type A at Line 5
Error Type B at Line 8
Error Type B at Line 11
Error Type B at Line 11
Error Type B at Line 11
Error Type B at Line 12
Error Type B at Line 17
Error Type B at Line 20
Error Type B at Line 36
Error Type A at Line 39
