lab1/Test/L1-A-13-27.cmm
struct Sb10qujykz9Pq {
}Ww 
;
;
struct q2CeYjBfHs zuTwGlCckwEw3Eb ( ) ${
{
    int s7lvX ;
    float rWfRevmLPtTmDvoG && ;
    int tuEddRA8sDaqwhv0 , ArjV9joNpxLCG [ 1851835147 
      ] = JOgj9pjCp_Sx0I1BpLb ;
=     if WAilN )     while ( > gaFNRLnF14ZoPSjB ) 
          while VhnFeHXnX2SF )     u7QqiNp902 ;


else     if ( JaMxMxd29X )     if ( AEHrY5h4A05BMWn0J 
      )     return u ;
== else     KrE_kS7iVD && BqAvH5dkAu == c9inJoR + 
      - ! ( DBrVV = tyO7RcezWD3_8fsj5 = Raau33H || KZBnn59tf 
      >= NrDPEt - MYmM4zbC1 / y ( uMHC4Jlv3tZic67u4 , DrHsSgDYTAW87Ft 
      = J [ f15P63yu1gMJs = && g9M6XPSm > sfTZC6YR4sbrm 
      + - QrYtKj2DF0GNAuf3 ( NVs2XWeByM = peViJht6 = WMWqzCLoH 
      != YyOWVxmCHxw4I <= - - ZHcP9U7fgZJvwOY2_O / _ ) < 
      1720199809 / 472414507.912158292 ] * LOrtVjH8MW ( 
      ) ) ) . ZCXF92F1yWwY ;



  }}
struct S61_g80V3 QS9S2V , q7gMwVSCsz5 

;
struct {
};
int ;
int ;
int iCD_3eKYLdjRmlr ( int vsCz_b , int ) {
}
int ;
: